# running-corgium

./: .coverage  .env.example  .gitignore  AWS.md  CLAUDE.md  Dockerfile.lambda  GEMINI.md  LICENSE  README.md  coderabbit.yaml  cognito.md  docker-compose.yaml  justfile  previous_issues.md  pyproject.toml  schemas.sql
.github/workflows/: claude-review.yml  workflow.yml
bruno-collection/: Get Athlete.bru  Get JWT Token.bru  Hello World.bru  Hello gRPC.bru  Trigger Export.bru  bruno.json
docs/: c4-architecture.puml  cognito-sequence.puml  race_prediction.md
frontend/: eslint.config.js  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  config.ts
frontend/src/api/: auth.ts  client.ts  cognito.ts  strava.ts  types.ts
frontend/src/components/: AthleteProfile.tsx  LoginButton.tsx  OAuthCallback.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAthlete.ts  useAuth.ts
frontend/src/pages/: AthletePage.tsx  DashboardPage.tsx  HomePage.tsx
frontend/tests/: setup.ts
frontend/tests/integration/: athlete.test.ts  strava-flow.test.ts
frontend/tests/mocks/: handlers.ts
frontend/tests/unit/: api.client.test.ts
frontend/tests/unit/components/: AthleteProfile.test.tsx  HomePage.test.tsx  LoginButton.test.tsx  OAuthCallback.test.tsx  ProtectedRoute.test.tsx
frontend/tests/unit/hooks/: useAthlete.test.tsx
infraestructure/layers/auth-layer/: build_layer.sh
src/: config.py  deployment.py  grpc_server.py  lambda_handler.py  main.py
src/auth/: __init__.py  cognito_routes.py  dependencies.py  schemas.py  standalone_routes.py  users.py
src/database/: __init__.py  activity_repository.py  db.py  dynamo_service.py  models.py  postgres_service.py
src/export/: kafka_producer.py
src/routers/: frontend.py  strava.py
src/strava/: __init__.py  strava_client.py
tests/: conftest.py  test_auth_security.py  test_deployment.py  test_dynamo_service.py  test_export_users.py  test_lambda_handler.py  test_main.py  test_postgres_service.py  test_secrets_manager.py  test_strava_service.py
