[project]
name = "running-corgium"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "frpc>=0.0.6",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "stravalib>=2.4",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "grpc-stubs>=1.53.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.9",
    "safety>=3.7.0",
    "types-protobuf>=5.29.0",
    "vulture>=2.14",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.14"
strict = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
